--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 
 PORT = 3080
-
+NODE_ENV = development
+JWT_KEY = LKJHGFGHJYTRDCVBNKUYTRFG456UIKJHGTTRFGHJUYTREWEDFGHJ
 MONGODB_URI = mongodb+srv://adisie:adisie-21@cluster0.6ekxjxy.mongodb.net/mern-stack-3?retryWrites=true&w=majority
